kubernetes/workloads/netbox/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
  labels:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/part-of: netbox
