kubernetes/workloads/netbox/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbox
  namespace: netbox
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`netbox.dominiksiejak.pl`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
        - name: secure-headers
          namespace: traefik
      services:
        - name: netbox
          port: 8080
  tls: {}
